// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="version-select"
>
  <button
    onClick={[Function]}
    type="button"
  >
    Docs 
    <span
      className=""
    >
      1.0
    </span>
    <ChevronDownIcon
      size={10}
    />
  </button>
</div>
`;

exports[`should render correctly: on current version 1`] = `
<div
  className="version-select"
>
  <button
    onClick={[Function]}
    type="button"
  >
    Docs 
    <span
      className="current"
    >
      1.0
    </span>
    <ChevronDownIcon
      size={10}
    />
  </button>
</div>
`;

exports[`should render correctly: open 1`] = `
<div
  className="version-select"
>
  <button
    onClick={[Function]}
    type="button"
  >
    Docs 
    <span
      className=""
    >
      1.0
    </span>
    <ChevronUpIcon
      size={10}
    />
  </button>
  <OutsideClickHandler
    onClickOutside={[Function]}
  >
    <ul>
      <li
        key="3.0"
      >
        <a
          href="/"
        >
          <span
            className="current"
          >
            3.0
          </span>
        </a>
      </li>
      <li
        key="2.0"
      >
        <a
          href="/2.0"
        >
          <span
            className="current"
          >
            2.0 LTS
          </span>
        </a>
      </li>
      <li
        key="1.0"
      >
        <a
          href="/1.0"
        >
          <span
            className=""
          >
            1.0
          </span>
        </a>
      </li>
    </ul>
  </OutsideClickHandler>
</div>
`;
